add chaned files

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
  <head>
+   
    <link rel="stylesheet" href="index.css">
 <title> Cv</title>
  </head>
 <body>
   
-  
-  
- <h1>Ruzanna Mosoyan</h1>
+  <h1>Ruzanna Mosoyan</h1>
  <h3>Contact</h3> 
+ 
      
  
  <p>e-mail mruzannna@gmail.com</p>
@@ -61,8 +61,7 @@ Bases of Intellectual Property 2009   Yerevan  Armenia
  Protection of Copyright and Related Rights  for Collective Management Organizations and Rightholders Associations.                              
 2014.11.14-2014.11.15    Yerevan  Armenia   </p>                   
 
-
- </p>Regional Workshop on Collective Copyright Management      
+</p>Regional Workshop on Collective Copyright Management  </p>    
                                                                        
  2014.11.05-2014.11.06  Tbilisi Georgia </p>
 <p>
